# local-w2g

./: LICENSE  README.md
.github/workflows/: build_client.yml  release.yml
client/: .gitignore  Makefile  package.json  svelte.config.js  vite.config.js
client/scripts/: fetch-ffprobe.sh
client/src/: app.html
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: error.rs  lib.rs  main.rs  mpv.rs  types.rs  websocket.rs
client/src-tauri/src/commands/: config.rs  file.rs  io.rs  messages.rs  mod.rs  playback.rs  playlist.rs  upload.rs  user.rs
client/src-tauri/src/core/: config.rs  file_manager.rs  mod.rs  probe.rs  state.rs
client/src-tauri/src/protocol/: client.rs  mod.rs  server.rs  types.rs
client/src-tauri/src/ws/: command.rs  connection.rs  dispatcher.rs  mod.rs
client/src/lib/: store.ts  types.ts
client/src/lib/api/: media.ts  message.ts  types.ts  user.ts  video.ts
client/src/lib/assets/css/: components.css  variables.css
client/src/lib/assets/styles/: main.css
client/src/lib/components/: ContextMenu.svelte  Details.svelte  EditEntryModal.svelte  HostControls.svelte  PlaylistItem.svelte  Toast.svelte  UserItem.svelte
client/src/lib/components/chat/: ChatMessage.svelte  EntryRouter.svelte  SystemMessage.svelte  Widget.svelte
client/src/lib/components/chat/widgets/: DownloadWidget.svelte  UploadWidget.svelte
client/src/lib/components/controls/: PlaybackControls.svelte
client/src/lib/components/user/: UserItem.svelte  UserState.svelte
client/src/lib/helpers/: compare.ts  format.ts  permission.ts
client/src/lib/stores/: edit.svelte.ts  error.svelte.ts  messages.svelte.ts  playlist.svelte.ts  state.svelte.ts  users.svelte.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/app/: +page.svelte
server/: .gitignore  Cargo.toml  config.yaml
server/src/: config.rs  dto.rs  error.rs  main.rs  state.rs  types.rs  ws.rs
server/src/commands/: handler.rs  mod.rs
server/src/commands/download/: mod.rs
server/src/commands/messages/: history.rs  mod.rs  send.rs  update.rs
server/src/commands/misc/: mod.rs  ping.rs
server/src/commands/playback/: mod.rs  pause.rs  play.rs  resume.rs  seek.rs  select.rs
server/src/commands/playlist/: edit.rs  list.rs  mod.rs  swap.rs
server/src/commands/resync/: initiate.rs  mod.rs  send_report.rs
server/src/commands/state/: assert.rs  confirm.rs  heartbeat.rs  mod.rs
server/src/commands/user/: identify.rs  list.rs  mod.rs  permission.rs
server/src/core/: mod.rs  provider.rs  state.rs
server/src/middleware/: mod.rs  password_middleware.rs
server/src/routes/: download.rs  mod.rs  upload.rs
server/src/services/: mod.rs
server/src/services/message/: mod.rs  service.rs  types.rs
server/src/services/permissions/: mod.rs  service.rs
server/src/services/playback/: mod.rs  service.rs  types.rs
server/src/services/snowflake/: mod.rs  service.rs
server/src/services/state/: mod.rs  service.rs  types.rs
server/src/services/user/: mod.rs  service.rs  types.rs
server/src/services/videos/: mod.rs  service.rs  types.rs
server/src/websocket/: dto.rs  handler.rs  message_parser.rs  mod.rs
