[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
reqwest = { version = "0.12.25", features = ["blocking", "json", "multipart", "stream"] }
reqwest-websocket = { version = "0.5.1", features = ["json"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
rfd = "0.16.0"
tokio-util = { version = "0.7.17", features = ["io"] }

