[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libmpv2 = "5.0.3"
url = { version = "2.5.8", features = ["serde"] }
tokio = { version = "1.52.1", features = ["full"] }
thiserror = "2.0.18"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.44"
futures-util = "0.3.32"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
rfd = "0.17.2"
bitflags = { version = "2.11.1", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
futures = "0.3.32"

